--- a/package.json
+++ b/package.json
@@ -31,13 +31,12 @@
         ">= 1%",
         "last 1 major version",
         "not dead",
-        "Chrome >= 45",
-        "Firefox >= 38",
-        "Edge >= 12",
-        "Explorer >= 10",
-        "iOS >= 9",
-        "Safari >= 9",
-        "Android >= 4.4",
-        "Opera >= 30"
+        "Chrome >= 60",
+        "Firefox >= 60",
+        "not Edge < 79",
+        "iOS >= 10",
+        "Safari >= 10",
+        "Android >= 6",
+        "not Explorer <= 11"
     ]
 }
