--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
         "dev": "vue-cli-service build --no-clean --watch --mode=development"
     },
     "dependencies": {
-        "@vueuse/core": "^4.0.0-beta.4",
+        "@vueuse/core": "^4.4.0",
         "core-js": "^3.6.5",
-        "vue": "^3.0.0"
+        "vue": "^3.0.10"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^4.5.6",
         "@vue/cli-service": "^4.5.6",
         "@vue/compiler-sfc": "^3.0.0-0",
+        "eslint": "^7.22.0",
+        "eslint-plugin-vue": "^7.8.0",
         "gettext-extractor": "^3.5.2",
         "node-sass": "^4.13.1",
         "postcss-embed-svg": "^0.9.1",
@@ -31,12 +33,13 @@
         ">= 1%",
         "last 1 major version",
         "not dead",
-        "Chrome >= 60",
-        "Firefox >= 60",
-        "not Edge < 79",
-        "iOS >= 10",
-        "Safari >= 10",
-        "Android >= 6",
-        "not Explorer <= 11"
+        "Chrome >= 45",
+        "Firefox >= 38",
+        "Edge >= 12",
+        "Explorer >= 10",
+        "iOS >= 9",
+        "Safari >= 9",
+        "Android >= 4.4",
+        "Opera >= 30"
     ]
 }
