--- a/package.json
+++ b/package.json
@@ -1,45 +1,17 @@
 {
-    "name": "vue-ld-{plugin-shortcode}",
-    "version": "1.0.0",
-    "private": true,
-    "scripts": {
-        "build": "vue-cli-service build --no-clean",
-        "dev": "vue-cli-service build --no-clean --watch --mode=development"
-    },
-    "dependencies": {
-        "@vueuse/core": "^4.4.0",
-        "core-js": "^3.6.5",
-        "vue": "^3.0.10"
-    },
-    "devDependencies": {
-        "@vue/cli-plugin-babel": "^4.5.6",
-        "@vue/cli-service": "^4.5.6",
-        "@vue/compiler-sfc": "^3.0.0-0",
-        "eslint": "^7.22.0",
-        "eslint-plugin-vue": "^7.8.0",
-        "gettext-extractor": "^3.5.2",
-        "node-sass": "^4.13.1",
-        "postcss-embed-svg": "^0.9.1",
-        "postcss-flexbugs-fixes": "^4.1.0",
-        "sass-loader": "^9.0.3"
-    },
-    "postcss": {
-        "plugins": {
-            "autoprefixer": {},
-            "postcss-flexbugs-fixes": {}
-        }
-    },
-    "browserslist": [
-        ">= 1%",
-        "last 1 major version",
-        "not dead",
-        "Chrome >= 45",
-        "Firefox >= 38",
-        "Edge >= 12",
-        "Explorer >= 10",
-        "iOS >= 9",
-        "Safari >= 9",
-        "Android >= 4.4",
-        "Opera >= 30"
-    ]
+  "name": "{plugin}",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "vite build --watch --mode=development",
+    "build": "vite build"
+  },
+  "dependencies": {
+    "vue": "^3.2.28"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^2.1.0",
+    "vite": "^2.7.13",
+    "gettext-extractor": "^3.5.3",
+    "sass": "^1.49.0"
+  }
 }
