--- a/package.json
+++ b/package.json
@@ -3,15 +3,25 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vite build --watch --mode=development",
-    "build": "vite build"
+    "build": "vite build",
+    "lint": "eslint ./src --ext .vue,.js --fix",
+    "rename": "node rename.js"
   },
+  "type": "module",
   "dependencies": {
-    "vue": "^3.3.4"
+    "@vueuse/core": "^10.9.0",
+    "vue": "^3.4.21"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
-    "vite": "^4.3.8",
-    "gettext-extractor": "^3.7.2",
-    "sass": "^1.62.1"
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "eslint": "^8.43.0",
+    "eslint-plugin-vue": "^9.15.0",
+    "gettext-extractor": "^3.8.0",
+    "prettier": "^2.8.8",
+    "prompts": "^2.4.2",
+    "sass": "^1.71.1",
+    "vite": "^5.1.5"
   }
 }
