feat: Auto-imports for components, composables, Vue API, and utils

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ node_modules
 .DS_Store
 *.local
 
+components.d.ts
+auto-imports.d.ts
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
