--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
   },
   "type": "module",
   "dependencies": {
-    "@vueuse/core": "^10.11.0",
-    "@wordpress/i18n": "^5.3.0",
-    "@wordpress/interactivity": "^6.3.0",
-    "vue": "^3.4.33"
+    "@vueuse/core": "^11.1.0",
+    "@wordpress/i18n": "^5.10.0",
+    "@wordpress/interactivity": "^6.10.0",
+    "vue": "^3.5.12"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.16.1",
-    "@vitejs/plugin-vue": "^5.0.5",
+    "@typescript-eslint/eslint-plugin": "^8.10.0",
+    "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-prettier": "^9.0.0",
-    "eslint": "^8.56.0",
-    "eslint-plugin-vue": "^9.27.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vue": "^9.29.0",
     "gettext-extractor": "^3.8.0",
     "prettier": "^3.3.3",
     "prompts": "^2.4.2",
-    "sass": "^1.77.8",
-    "vite": "^5.3.4"
+    "sass": "^1.80.3",
+    "unplugin-auto-import": "^0.18.3",
+    "unplugin-vue-components": "^0.27.4",
+    "vite": "^5.4.9"
   }
 }
